--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
 <div *ngIf="!this.logged" class="font">
     {{text.needlogin}}
 </div>
 
-<mat-slide-toggle>Toggle me!</mat-slide-toggle>
-<app-create-modal>
-    
-</app-create-modal>
+<div class="mat-app-background basic-container">
+  <app-create-modal>loading</app-create-modal>
+</div>
 
 <div *ngIf="this.logged">
     Name: {{name}}
@@ -134,3 +134,5 @@
         </table>
     </div>
 </div>
+
+
