--- a/src/app/home/change-dialog/change-dialog.component.html
+++ b/src/app/home/change-dialog/change-dialog.component.html
@@ -1,12 +1,12 @@
 <div mat-dialog-content>
-    <form [formGroup]="form_change">
+    <form [formGroup]="formChange">
       <table>
         <tr>
-          <td>Description:</td>
+          <td>{{ text.description }}</td>
           <td><input formControlName="description"></td>
         </tr>
         <tr>
-          <td>Priority:</td>
+          <td>{{ text.priority }}</td>
           <td>
             <select formControlName="priority" #prio name="" id="">
               <option *ngFor="let opt of this.options" value="{{opt}}">
@@ -16,15 +16,15 @@
           </td>
         </tr>
         <tr>
-          <td>Time:</td>
+          <td>{{ text.time }}</td>
           <td><input formControlName="time"></td>
         </tr>
       </table>
     </form>
   </div>
   <div mat-dialog-actions>
-    <button mat-button (click)="onNoClick()">Cancel</button>
-    <div *ngIf="this.form_change.valid">
-      <button mat-button (click)="onClick()" cdkFocusInitial>Change</button>
+    <button mat-button (click)="onNoClick()">{{ text.cancel }}</button>
+    <div *ngIf="this.formChange.valid">
+      <button mat-button (click)="onClick()" cdkFocusInitial>{{ text.change }}</button>
     </div>
   </div>
