--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="t_a">
-    <a class="m_r" routerLink="/home">{{text.home}}</a>
-    <a class="m_r" routerLink="/login">{{text.login}}</a>
-    <a class="m_r" routerLink="/sign">{{text.sign}}</a>
+<nav class="topLine fontSize">
+    <a class="marginTopLine" routerLink="/home">{{text.home}}</a>
+    <a class="marginTopLine" routerLink="/login">{{text.login}}</a>
+    <a class="marginTopLine" routerLink="/sign">{{text.sign}}</a>
 </nav>
 <router-outlet></router-outlet>
