--- a/src/styles.css
+++ b/src/styles.css
@@ -1,42 +1,30 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-.t_a {
-    text-align: left; padding: 10px; font-size: 20px;
-}
-  
-.m_r {
-    margin-right: 40px;
-}
-
-.font {
+.fontSize {
     font-size: 20px;
 }
 
-.width, .div_m {
+.topLine {
+    text-align: left; padding: 10px;
+}
+  
+.marginTopLine {
+    margin-right: 40px;
+}
+
+.width {
     width: 20%; margin-left: 40%; margin-top: 10px
 }
 
-.m_left {
-    margin-left: 38%;
-}
-
-.width_i, .inp, .width {
+.widthInpDel {
     width: 100%;
-}
-
-.b_m {
-    margin-left: 38%;
 }
 
 .border {
     border: 1px solid black;
 }
 
-.pad {
+.padingTop {
     padding-top: 10px;
-}
-
-.center {
-    text-align: center;
 }
