--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,7 +88,7 @@
                 <th class="border">{{text.edit}}</th>
                 <th class="border">{{text.delete}}</th>
             </tr>
-            <tr *ngFor="let item of tasks; index as i;">
+            <tr *ngFor="let item of this.tasks | async; index as i;">
                 <td class="border">{{item.description}}</td>
                 <td class="border">
                     {{item.priority}}
