--- a/src/app/home/change-dialog/change-dialog.component.html
+++ b/src/app/home/change-dialog/change-dialog.component.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <td>{{ text.time }}</td>
-          <td><input formControlName="time"></td>
+          <td><input formControlName="time" type="time"></td>
         </tr>
       </table>
     </form>
